--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -34,11 +34,12 @@
     }
 
     .table-danger {
+        --bs-table-accent-bg: #f8d7da;
         font-weight: bold;
     }
 
     .table-danger.-full {
-        background-color: #fe536a;
+        --bs-table-accent-bg: #fe536a;
         font-weight: bold;
     }
 
