--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -245,7 +245,7 @@ tr.top-text, tr.top-text th {
 }
 
 ._current_day, tr._current_day > td._weekend_col {
-    --bs-table-accent-bg:#ffc107;
+    --bs-table-accent-bg:#ffc107!important;
 }
 
 .table-active {
