--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -94,6 +94,11 @@
           </li>
 
           <li class="nav-item">
+            <a class="nav-link {% if '/debts/' in request.path %}active{% endif %}"
+              href="{% url 'debts:debts_index' %}">Skolos</a>
+          </li>
+
+          <li class="nav-item">
             <div class="btn-group">
               <a class="btn btn-menu nav-link {% if '/books/' in request.path %}active{% endif %}"
                 href="{% url 'books:books_index' %}">Knygos</a>
