--- a/project/debts/templates/debts/index.html
+++ b/project/debts/templates/debts/index.html
@@ -2,7 +2,40 @@
 
 {% block content %}
 <div class="row gx-2">
-    <div class="col-4">Borrow</div>
-    <div class="col-4">Lent</div>
+    <div class="col">
+        <!-- Borrow -->
+        <div class="row">
+            <div class="col">
+                <h6 class="py-2">Paskolinau</h6>
+                <div id="borrow_ajax">{{ borrow }}</div>
+            </div>
+        </div>
+
+        <!-- Borrow Return -->
+        <div class="row">
+            <div class="col">
+                <h6 class="py-2">Gražino</h6>
+                <div id="borrow_return_ajax">{{ borrow_return }}</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col">
+        <!-- Lent -->
+        <div class="row">
+            <div class="col">
+                <h6 class="py-2">Pasiskolinau</h6>
+                <div id="lent_ajax">{{ lent }}</div>
+            </div>
+        </div>
+
+        <!-- Lent Return -->
+        <div class="row">
+            <div class="col">
+                <h6 class="py-2">Gražinau</h6>
+                <div id="lent_return_ajax">{{ lent_return }}</div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
