--- a/project/debts/templates/debts/includes/lents_return_list.html
+++ b/project/debts/templates/debts/includes/lents_return_list.html
@@ -8,6 +8,7 @@
             <th>Data</th>
             <th>Kiek</th>
             <th>Sąskaita</th>
+            <th>Pastaba</th>
             <th colspan="2"></th>
         </tr>
     </thead>
@@ -17,6 +18,7 @@
             <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-start">{{ item.price|intcomma }}</td>
             <td class="text-start">{{ item.account }}</td>
+            <td class="text-start">{{ item.remark }}</td>
             <td class="w-edit">
                 <a role="button" data-url="" class=" js-create edit" title="Edit">
                     <i class="bi bi-pencil-fill"></i>
