index template tweaks for small screen

--- a/project/debts/templates/debts/index.html
+++ b/project/debts/templates/debts/index.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="row gx-2">
     <!-- Borrow -->
-    <div class="col">
+    <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col"><h6>Paskolinau</h6></div>
             <div class="col text-end">
@@ -22,7 +22,7 @@
     </div>
 
     <!-- Lent -->
-    <div class="col">
+    <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
                 <h6>Pasiskolinau</h6>
@@ -40,7 +40,7 @@
 
 <div class="row gx-2">
     <!-- Borrow Return -->
-    <div class="col">
+    <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
                 <h6>Gražino</h6>
@@ -56,7 +56,7 @@
     </div>
 
     <!-- Lent Return -->
-    <div class="col">
+    <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
                 <h6>Gražinau</h6>
