ReloadIndex split to BorrowReload and LentReload

--- a/project/debts/templates/debts/includes/reload_index.html
+++ b/project/debts/templates/debts/includes/reload_index.html
@@ -1,2 +1,4 @@
 <div id="borrow_ajax">{{ borrow }}</div>
+<div id="borrow_return_ajax">{{ borrow_return }}</div>
 <div id="lent_ajax">{{ lent }}</div>
+<div id="lent_return_ajax">{{ lent_return }}</div>
