--- a/project/templates/modal.html
+++ b/project/templates/modal.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="modal-form">
+<div class="modal fade" id="modal-form" data-target="null">
     <div class="modal-dialog modal-650">
         <div class="modal-content"></div>
     </div>
