rename residual -> money_flow

--- a/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
@@ -19,7 +19,7 @@
             {% cell item.incomes %}
             {% cell item.expenses %}
             {% cell item.balance highlight_value=True  %}
-            {% cell item.residual %}
+            {% cell item.money_flow %}
         </tr>
         {% endfor %}
     </tbody>
