Revert "Merge branch 'reorganize_balances' into develop"
This reverts commit b1a26ec1f16ab25bc1971459adf2d5144e2c35db, reversing
changes made to 8fae26116babf03f6638208c28fe8d8bc056284c.

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_balance.html
@@ -91,6 +91,12 @@
             name: 'Išlaidos',
             data: {{ e }},
             color: '#c0504d'
+        }, {
+            type: 'line',
+            name: 'Taupymas',
+            data: {{ s }},
+            color: '#ffc000',
+            visible: false,
         }]
     });
 </script>
