--- a/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
@@ -48,10 +48,10 @@
             <th></th>
             {% cell avg_row.savings tag='th' css_class="bl" %}
             {% cell avg_row.savings_close tag='th' css_class="br" %}
-            <th class="bl toggleDisplay">B</th>
-            <th class="toggleDisplay">BR</th>
-            <th class="toggleDisplay">L</th>
-            <th class="br toggleDisplay">LR</th>
+            <th class="bl toggleDisplay">{{ avg_row.borrow }}</th>
+            <th class="toggleDisplay">{{ avg_row.borrow_return }}</th>
+            <th class="toggleDisplay">{{ avg_row.lent }}</th>
+            <th class="br toggleDisplay">{{ avg_row.lent_return }}</th>
             <th><b>Metų gale</b></th>
         </tr>
         <tr class="total">
