--- a/project/bookkeeping/templates/bookkeeping/includes/info_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/info_table.html
@@ -1,9 +1,13 @@
 {% load table_cell %}
 <table class="table table-striped table-hover table-sm stats">
     <thead>
-        <tr class="top"><th class="text-end">{{ title }}</th></tr>
+        <tr class="top">
+            {% for t in title %}<th class="text-end">{{ t }}</th>{% endfor %}
+        </tr>
     </thead>
     <tfoot>
-        <tr>{% cell data tag='th' %}</tr>
+        <tr>
+            {% for d in data %}{% cell d tag='th' %}{% endfor %}
+        </tr>
     </tfoot>
 </table>
