--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -47,23 +47,13 @@
     <div class="col-lg-2">
         <div class="row">
             <div class="col-lg-12 col-md-3">
-                <!-- Average Incomes -->
-                <div id="avg_incomes">{{ avg_incomes }}</div>
-            </div>
-
-            <div class="col-lg-12 col-md-3">
-                <!-- Average Expenses -->
-                <div id="avg_expenses">{{ avg_expenses }}</div>
-            </div>
-
-            <div class="col-lg-12 col-md-3">
-                <!-- Money -->
-                <div id="money">{{ money }}</div>
-            </div>
-
-            <div class="col-lg-12 col-md-3">
-                <!-- Worth -->
+                <!-- Wealth -->
                 <div id="wealth">{{ wealth }}</div>
+            </div>
+
+            <div class="col-lg-12 col-md-3">
+                <!-- Average Incomes and Expenses -->
+                <div id="avg_incomes">{{ averages }}</div>
             </div>
         </div>
     </div>
