debts summary in bookkeeping index template

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -55,6 +55,16 @@
                 <!-- Average Incomes and Expenses -->
                 <div id="avg_incomes">{{ averages }}</div>
             </div>
+
+            <div class="col-lg-12 col-md-3">
+                <!-- Debts Borrow -->
+                <div id="borrow">{{ borrow }}</div>
+            </div>
+
+            <div class="col-lg-12 col-md-3">
+                <!-- Debts Lent -->
+                <div id="lent">{{ lent }}</div>
+            </div>
         </div>
     </div>
 </div>
