html and css tweaks for 15'' screen

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -8,8 +8,8 @@
 {% block content %}
 
 <div class="row gx-2 my-2 border-bottom border-primary">
-    <div class="col-lg-5">{{ year_balance }}</div>
-    <div class="col-lg-7">{{ year_expenses }}</div>
+    <div class="col-lg-5 table-responsive">{{ year_balance }}</div>
+    <div class="col-lg-7 table-responsive">{{ year_expenses }}</div>
 </div>
 
 <div class="row gx-2 my-2 border-bottom border-primary">
