--- a/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_balance.html
@@ -5,7 +5,7 @@
             <th colspan="4">Balansas</th>
             <th colspan="2" class="bl br">Taupymas</th>
             <th colspan="4" class="bl br toggleDisplay">Skolos</th>
-            <th class="text-end">
+            <th class="text-end text-nowrap">
                 <button onclick="toggleDebts()" id="toggle_debts" class="btn btn-super-sm" style="font-weight: bold; color: #0d6efd; padding-right: 0!important;">Rodyti skolas</button>
             </th>
         </tr>
@@ -20,7 +20,7 @@
             <th class="toggleDisplay">Gražino</th>
             <th class="toggleDisplay">Pasiskolinau</th>
             <th class="br toggleDisplay">Gražinau</th>
-            <th>Pinigų srautas</th>
+            <th class="text-nowrap">Pinigų srautas</th>
         </tr>
     </thead>
     <tbody>
