--- a/project/bookkeeping/templates/bookkeeping/includes/info_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/info_table.html
@@ -2,7 +2,10 @@
 <table class="table table-striped table-hover table-sm stats">
     <thead>
         <tr class="top">
-            {% for t in title %}<th class="text-end w-50">{{ t }}</th>{% endfor %}
+            {% for t in title %}
+            <th class="text-end text-nowrap" style="width: calc(100%/{{ title|length }});">
+                {{ t }}
+            </th>{% endfor %}
         </tr>
     </thead>
     <tfoot>
