--- a/project/bookkeeping/templates/bookkeeping/includes/info_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/info_table.html
@@ -1,4 +1,4 @@
-{% load table_cell %}
+{% load table_cell %}{% load get_item %}
 <table class="table table-striped table-hover table-sm stats">
     <thead>
         <tr class="top">
@@ -10,7 +10,9 @@
     </thead>
     <tfoot>
         <tr>
-            {% for d in data %}{% cell d tag='th' %}{% endfor %}
+            {% for d in data %}
+            {% cell d tag='th' highlight_value=highlight|get_list_val:forloop.counter0 %}
+            {% endfor %}
         </tr>
     </tfoot>
 </table>
