--- a/project/users/templates/users/login.html
+++ b/project/users/templates/users/login.html
@@ -6,12 +6,18 @@
         height: 100vh;
         display: flex;
     }
+    h3.card-title {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 2rem;
+    }
 </style>
 {% endblock %}
 
 {% block content %}
 <div class="card my-auto">
     <div class="card-body">
+        <h3 class="card-title">{{ card_title }}</h3>
         <form method="post" novalidate>
             {% csrf_token %}
             <input type="hidden" name="next" value="{{ next }}">
