--- a/project/users/templates/users/login.html
+++ b/project/users/templates/users/login.html
@@ -1,19 +1,5 @@
 {% extends 'users/users_base.html' %}
 
-{% block head%}{{ block.super }}
-<style>
-    .container {
-        height: 100vh;
-        display: flex;
-    }
-    h3.card-title {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 2rem;
-    }
-</style>
-{% endblock %}
-
 {% block content %}
 <div class="card my-auto">
     <div class="card-body">
@@ -23,7 +9,7 @@
             {% csrf_token %}
             <input type="hidden" name="next" value="{{ next }}">
             {% include 'core/includes/form.html' %}
-            <button type="submit" class="btn btn-primary w-100">{{ submit_button_text }}</button>
+            <button type="submit" class="btn btn-primary btn-sm">{{ submit_button_text }}</button>
         </form>
     </div>
 </div>
