--- a/project/users/templates/users/login.html
+++ b/project/users/templates/users/login.html
@@ -10,9 +10,13 @@
             <input type="hidden" name="next" value="{{ next }}">
             {% include 'core/includes/form.html' %}
             <button type="submit" class="btn btn-primary btn-sm">{{ submit_button_text }}</button>
-
         </form>
     </div>
+    {% if signup_link %}
+    <div class="card-footer text-muted text-center">
+        New to Bookkeeping? <a href="{% url 'users:signup' %}">Sign up</a>
+    </div>
+    {% endif %}
 </div>
 {% if reset_link and form.errors %}
 <div class="text-center py-2">
