--- a/project/users/templates/users/password_reset_email.html
+++ b/project/users/templates/users/password_reset_email.html
@@ -4,7 +4,7 @@ Someone asked for a password reset for the email address {{ email }}.
 Follow the link below:
 {{ protocol }}://{{ domain }}{% url 'users:password_reset_confirm' uidb64=uid token=token %}
 
-In case you forgot your Django Boards username: {{ user.username }}
+In case you forgot your username: {{ user.username }}
 
 If clicking the link above doesn't work, please copy and paste the URL
 in a new browser window instead.
