--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -172,6 +172,7 @@
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item btn-sm" href="{% url 'users:logout' %}">Log out</a></li>
             <li><a class="dropdown-item btn-sm" href="{% url 'users:password_change' %}">Password change</a></li>
+            {% if user.is_superuser %}<li><a class="dropdown-item btn-sm" href="{% url 'users:invite' %}">Sent invite link</a></li>{% endif %}
           </ul>
         </div>
       </nav>
