include modal in base.thml template

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -178,7 +178,7 @@
       </nav>
 
       {% block content %}{% endblock content %}
-
+      {% include 'modal.html' %}
     </div>
     {% endblock body %}
     <script src="{% static 'js/tooltip.js' %}"></script>
