--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -11,6 +11,7 @@
     <script src="{% static 'bootstrap_datepicker/js/bootstrap-datetimepicker-4.17.47.min.js' %}"></script>
     <script src="{% static 'bootstrap_datepicker_plus/js/datepicker-widget.js' %}"></script>
     <script src="{% static 'js/ajax.js' %}"></script>
+    <script src="{% static 'js/ajax_invite.js' %}"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
@@ -172,7 +173,7 @@
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item btn-sm" href="{% url 'users:logout' %}">Log out</a></li>
             <li><a class="dropdown-item btn-sm" href="{% url 'users:password_change' %}">Change password</a></li>
-            {% if user.is_superuser %}<li><a class="dropdown-item btn-sm" href="{% url 'users:invite' %}">Sent invite link</a></li>{% endif %}
+            {% if user.is_superuser %}<li><a role="button" class="dropdown-item btn-sm js-invite" data-url="{% url 'users:invite' %}">Sent invite link</a></li>{% endif %}
           </ul>
         </div>
       </nav>
