SettingsUsers list view

--- a/project/users/templates/users/settings_index.html
+++ b/project/users/templates/users/settings_index.html
@@ -4,8 +4,12 @@
 
 {% block content %}
 
+<div class="row my-2 mx-0">
+    <div class="col text-center bg-light"><h6 class="pt-1 pb-2">Settings</h6></div>
+</div>
+
 <div class="row my-2">
-    <div class="col">users</div>
+    <div class="col">{{ users }}</div>
 
     <div class="col">no incomes</div>
 </div>
